# fieldguide-ai

./: .gitignore  README.md  langchain_main.py  main.py  pyproject.toml
.cursor/rules/: cursor-rules.mdc  python-oop-design-guidelines.mdc  readme-maintenance.mdc
fieldguide_ai/: __init__.py  cli.py  demo.py  errors.py  generation.py  interactive.py  knowledge_bot.py  messages.py  terminal.py
fieldguide_ai/chat/: __init__.py  generation.py  messages.py
fieldguide_ai/ingestion/: __init__.py  chunkers.py  loader.py  models.py  pipeline.py
fieldguide_ai/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  registry.py
fieldguide_ai/vectordb/: __init__.py  chroma_store.py  embeddings.py
fieldguide_ai/vectorstore/: __init__.py  base.py  chroma_store.py  embeddings.py  factory.py  faiss_store.py  metadata.py  numpy_store.py
langchain_pandas/: __init__.py  agent.py  catalog.py  tools.py
tests/: test_cli.py  test_generation.py  test_ingestion_chunkers.py  test_ingestion_loader.py  test_ingestion_pipeline.py  test_interactive.py  test_knowledge_bot.py  test_langchain_pandas.py  test_messages.py  test_provider_registry.py  test_providers.py  test_vectordb.py  test_vectorstore.py  test_vectorstore_faiss.py
