[project]
name = "fieldguide-ai"
version = "0.1.0"
description = "A forward-deployed RAG agent that turns scattered company knowledge into executable customer/workflow decisions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "openai>=2.44.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
notebook = ["ipykernel"]
