[project]
name = "fieldguide-ai"
version = "0.1.0"
description = "A forward-deployed RAG agent that turns scattered company knowledge into executable customer/workflow decisions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.117.0",
    "chromadb>=1.5.9",
    "langchain[openai]>=1.3.13",
    "numpy>=2.0.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.0.0",
    "questionary>=2.0",
    "tabulate>=0.10.0",
]

[project.scripts]
fieldguide = "fieldguide_ai.interactive:main"

[project.optional-dependencies]
notebook = ["ipykernel"]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fieldguide_ai"
module-root = ""
